--- a/Front-end/Layout/CalendarioSemanal.razor
+++ b/Front-end/Layout/CalendarioSemanal.razor
@@ -70,6 +70,7 @@
         green = new List<string> { "#D6F89480", "#9EB570", "#D6F894" };
         orange = new List<string> { "#F6C4AF80", "#A58273", "#F6C4AF" };
         blue = new List<string> { "#95BBF880", "#5E77A0", "#95BBF8" };
+        gray = new List<string> { "#A9A9A980", "#6E6E6E", "#A9A9A9" };
 
         WeekDays = Enumerable.Range(0, 7)
         .Select(i => DiaSelecionado.AddDays(i - (int)DiaSelecionado.DayOfWeek))
@@ -87,14 +88,16 @@
                 string horaFormatada = (hora.Hours % 12).ToString("D2") + ":" + hora.Minutes.ToString("D2") + " " + (hora.Hours >= 12 ? "PM" : "AM");
                 List<string> colors = new List<string>();
 
-                if(compromisso.Servico == "Psicóloga" || compromisso.Servico == "Psicólogo" || compromisso.Servico == "Psicóloga(o)" || compromisso.Servico == "Psicólogo(a)"){
+                if(compromisso.Servico == "Psicóloga" || compromisso.Servico == "Psicólogo" || compromisso.Servico == "Psicóloga(o)" || compromisso.Servico == "Psicólogo(a)" || compromisso.Servico == "Psicologia"){
                     colors = new List<string> (pink);
-                } else if(compromisso.Servico == "Pedagoga" || compromisso.Servico == "Pedagogo" || compromisso.Servico == "Pedagoga(o)" || compromisso.Servico == "Pedagogo(a)"){
+                } else if(compromisso.Servico == "Pedagoga" || compromisso.Servico == "Pedagogo" || compromisso.Servico == "Pedagoga(o)" || compromisso.Servico == "Pedagogo(a)" || compromisso.Servico == "Pedagogia"){
                     colors = new List<string> (blue);
                 } else if(compromisso.Servico == "Nutricionista"){
                     colors = new List<string> (green);
                 } else if(compromisso.Servico == "Assistente Social"){
                     colors = new List<string> (orange);
+                } else{
+                    colors = new List<string> (gray);
                 }
 
                 var evento = new EventItem { Day = compromisso.Data, Time = horaFormatada, Title = compromisso.Servico, Person = compromisso.Profissional_Nome, Colors = colors };
