<fix>: erros de digitação e ausência de definição

--- a/Front-end/Layout/Calendario.razor
+++ b/Front-end/Layout/Calendario.razor
@@ -116,7 +116,7 @@
             @for (int i = 0; i < Math.Min(compromissosSemanais.Count, 4); i++)
             {
                 var cor= "#A9A9A9";
-                @if(compromissosSemanais[i].Servico == "Psicóloga" || compromissosSemanais[i].Servico == "Psicólogo" || compromissosSemanais[i].Servico == "Psicóloga(o)" || compromissosSemanais[i].Servico == "Psicólogo(a)" compromissosSemanais[i].Servico == "Psicologia"){
+                @if(compromissosSemanais[i].Servico == "Psicóloga" || compromissosSemanais[i].Servico == "Psicólogo" || compromissosSemanais[i].Servico == "Psicóloga(o)" || compromissosSemanais[i].Servico == "Psicólogo(a)" || compromissosSemanais[i].Servico == "Psicologia"){
                     cor = "#F884D7";
                 } else if(compromissosSemanais[i].Servico == "Pedagoga" || compromissosSemanais[i].Servico == "Pedagogo" || compromissosSemanais[i].Servico == "Pedagoga(o)" || compromissosSemanais[i].Servico == "Pedagogo(a)" || compromissosSemanais[i].Servico == "Pedagogia"){
                     cor = "#95BBF8";
