--- a/Front-end/Layout/CalendarioDiario.razor
+++ b/Front-end/Layout/CalendarioDiario.razor
@@ -72,7 +72,7 @@
     public EventCallback<DateTime> OnDiaSelecionadoChange { get; set; }
     private List<string> TimeSlots = new() { "07:00 AM", "08:00 AM", "09:00 AM", "10:00 AM", "11:00 AM", "12:00 AM", "01:00 PM", "02:00 PM", "03:00 PM", "04:00 PM", "05:00 PM", "06:00 PM", "07:00 PM", "08:00 PM", "09:00 PM", "10:00 PM" };
 
-    private List<string> pink, green, orange, blue;
+    private List<string> pink, green, orange, blue, gray;
     private List<CompromissoModel> compromissos;
     private List<EventItem> Events = new List<EventItem>();
 
