<fix>: inicialização de variável

--- a/Front-end/Layout/CalendarioSemanal.razor
+++ b/Front-end/Layout/CalendarioSemanal.razor
@@ -119,6 +119,7 @@
         green = new List<string> { "#D6F89480", "#9EB570", "#D6F894" };
         orange = new List<string> { "#F6C4AF80", "#A58273", "#F6C4AF" };
         blue = new List<string> { "#95BBF880", "#5E77A0", "#95BBF8" };
+        gray = new List<string> { "#A9A9A980", "#6E6E6E", "#A9A9A9" };
 
         WeekDays = Enumerable.Range(0, 7)
         .Select(i => DiaSelecionado.AddDays(i - (int)DiaSelecionado.DayOfWeek))
