<fix>: verificação de um serviço na condição

--- a/Front-end/Layout/Calendario.razor
+++ b/Front-end/Layout/Calendario.razor
@@ -122,7 +122,7 @@
                     cor = "#95BBF8";
                 } else if(compromissosSemanais[i].Servico == "Nutricionista"){
                     cor = "#D6F894";
-                } else if(compromissosSemanais[i].Servico == "Educador Físico" || compromissosSemanais[i].Servico == "Educadora Física"){
+                } else if(compromissosSemanais[i].Servico == "Assistente Social"){
                     cor = "#F6C4AF";
                 }
                 <div>
