<fix>: ajustes nos serviços

--- a/Front-end/Layout/CalendarioSemanal.razor
+++ b/Front-end/Layout/CalendarioSemanal.razor
@@ -139,7 +139,7 @@
                     colors = new List<string> (blue);
                 } else if(compromisso.Servico == "Nutricionista"){
                     colors = new List<string> (green);
-                } else if(compromisso.Servico == "Educador Físico" || compromisso.Servico == "Educadora Física"){
+                } else if(compromisso.Servico == "Assistente Social"){
                     colors = new List<string> (orange);
                 }
 
