--- a/Front-end/Pages/Servicos.razor
+++ b/Front-end/Pages/Servicos.razor
@@ -25,7 +25,9 @@
                         <h2 class="weight-500" style="font-size: 1.375rem; padding-bottom: 20px; color: var(--black-gray);">@servico_escolhido.Tipo_Servico - CRP 17/0000</h2>
                         
                         <div style="height: 26rem; overflow: auto; scrollbar-width: none;">
-                            <p class="paragraph-size weight-500" style="color: var(--black-gray); text-align: justify;">@servico_escolhido.Descricao</p>
+                            <p class="paragraph-size weight-500" style="color: var(--black-gray); text-align: justify;">
+                                @((MarkupString)servico_escolhido.Descricao.Replace("\n", "<br>"))
+                            </p>
                         </div>
                     }
                 </div>
