--- a/Front-end/Pages/Agenda.razor
+++ b/Front-end/Pages/Agenda.razor
@@ -247,11 +247,11 @@
                 string horaFormatadaFim = (horaFim.Hours % 12).ToString("D2") + ":" + horaFim.Minutes.ToString("D2") + " " + (horaFim.Hours >= 12 ? "PM" : "AM");
                 List<string> colors = new List<string>();
 
-                if(compromisso.Servico == "Psicóloga" || compromisso.Servico == "Psicólogo" || compromisso.Servico == "Psicóloga(o)" || compromisso.Servico == "Psicólogo(a)"){
+                if(compromisso.Servico == "Psicóloga" || compromisso.Servico == "Psicólogo" || compromisso.Servico == "Psicóloga(o)" || compromisso.Servico == "Psicólogo(a)" || compromisso.Servico == "Psicologia"){
                     colors = new List<string> (pink);
-                } else if(compromisso.Servico == "Pedagoga" || compromisso.Servico == "Pedagogo" || compromisso.Servico == "Pedagoga(o)" || compromisso.Servico == "Pedagogo(a)"){
+                } else if(compromisso.Servico == "Pedagoga" || compromisso.Servico == "Pedagogo" || compromisso.Servico == "Pedagoga(o)" || compromisso.Servico == "Pedagogo(a)" || compromisso.Servico == "Pedagogia"){
                     colors = new List<string> (blue);
-                } else if(compromisso.Servico == "Nutricionista"){
+                } else if(compromisso.Servico == "Nutricionista" || compromisso.Servico == "Nutrição"){
                     colors = new List<string> (green);
                 } else if(compromisso.Servico == "Assistente Social"){
                     colors = new List<string> (orange);
